<?xml version="1.0" encoding="utf-8"?>

<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <androidx.preference.EditTextPreference
        android:icon="@android:drawable/ic_menu_preferences"
        android:key="simb_jog_1"
        android:title="@string/simb_jog1"
        android:summary="@string/summary_jog1"/>



    <androidx.preference.EditTextPreference
        android:icon="@android:drawable/ic_menu_preferences"
        android:key="simb_jog_2"
        android:title="@string/simb_jog2"
        android:summary="@string/summary_jog2"/>

    <androidx.preference.EditTextPreference
        android:icon="@android:drawable/ic_menu_preferences"
        android:key="nomeJog1"
        android:title="@string/nome1"
        android:summary="@string/summary_nome1"/>




    <androidx.preference.EditTextPreference
        android:icon="@android:drawable/ic_menu_preferences"
        android:key="nomeJog2"
        android:title="@string/nome2"
        android:summary="@string/summary_nome2"/>
</androidx.preference.PreferenceScreen>
