<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="devnoite.progandroid.jogodavelhaapp.activity.MainActivity">
    <item
        android:icon="@android:drawable/ic_menu_revert"
        android:id="@+id/menu_resetar"
        android:title="@string/resetar"
        app:showAsAction="always" />
    <item
        android:icon="@android:drawable/ic_media_previous"
        android:id="@+id/menu_inicio"
        android:title="@string/início"
        app:showAsAction="never" />
    <item
        android:icon="@android:drawable/ic_menu_preferences"
        android:id="@+id/menu_prefs"
        android:title="@string/preferencias"
        app:showAsAction="never" />
</menu>