<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment.JogoFragment">

    <LinearLayout


        android:id="@+id/tvplacar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/placar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/placar"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tvJogadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/primeiroJogador"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jogador1"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/segundoJogador"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/jogador2"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/velha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/deu_velha"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/tvContador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/contJog1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contagem"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/contJog2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contagem"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/contVelha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/contagem"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TableLayout
        android:background="@drawable/botao_customizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:padding="15dp">



        <TableRow

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <Button
                android:id="@+id/bt00"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ciano"
                android:textSize="50dp"
                android:textColor="@color/amarelo"
                />

            <Button
                android:id="@+id/bt01"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ciano"
                android:textSize="50dp"
                android:textColor="@color/amarelo"/>

            <Button
                android:id="@+id/bt02"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ciano"
                android:textSize="50dp"
                android:textColor="@color/amarelo"/>

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/bt10"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ciano"
                android:textSize="50dp"
                android:textColor="@color/amarelo"/>

            <Button
                android:id="@+id/bt11"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ciano"
                android:textSize="50dp"
                android:textColor="@color/amarelo"/>

            <Button
                android:id="@+id/bt12"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ciano"
                android:textSize="50dp"
                android:textColor="@color/amarelo"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/bt20"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ciano"
                android:textSize="50dp"
                android:textColor="@color/amarelo"/>

            <Button
                android:id="@+id/bt21"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="2.5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ciano"
                android:textSize="50dp"
                android:textColor="@color/amarelo"/>

            <Button
                android:id="@+id/bt22"
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="2.5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/ciano"
                android:textSize="50dp"
                android:textColor="@color/amarelo"/>

        </TableRow>




</TableLayout>

</LinearLayout>